Split into -core, -client and -server modules (#296)
Fixes #252